// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Button Default 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  background-color: var(--clr-se-v01);
  border: none;
  padding: 0;
  font: inherit;
  cursor: pointer;
  outline: inherit;
  box-shadow: none;
}

.c0:disabled {
  opacity: 0.6;
  -webkit-filter: saturate(60%);
  filter: saturate(60%);
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  cursor: not-allowed;
}

.c1 {
  width: auto;
  height: auto;
}

@media screen and (min-width:0) {

}

@media screen and (min-width:320px) {

}

@media screen and (min-width:480px) {

}

@media screen and (min-width:768px) {

}

@media screen and (min-width:1024px) {

}

@media screen and (min-width:1200px) {

}

<button
  className="c0 c1"
  type="button"
>
  Default
</button>
`;

exports[`Storyshots Button Disabled 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  background-color: var(--clr-se-v01);
  border: none;
  padding: 0;
  font: inherit;
  cursor: pointer;
  outline: inherit;
  box-shadow: none;
}

.c0:disabled {
  opacity: 0.6;
  -webkit-filter: saturate(60%);
  filter: saturate(60%);
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  cursor: not-allowed;
}

.c1 {
  width: auto;
  height: auto;
}

@media screen and (min-width:0) {

}

@media screen and (min-width:320px) {

}

@media screen and (min-width:480px) {

}

@media screen and (min-width:768px) {

}

@media screen and (min-width:1024px) {

}

@media screen and (min-width:1200px) {

}

<button
  aria-label="a button"
  className="c0 c1"
  disabled={true}
  title="Button"
  type="button"
>
  Disabled
</button>
`;

exports[`Storyshots Button Submit 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  background-color: var(--clr-se-v01);
  border: none;
  padding: 0;
  font: inherit;
  cursor: pointer;
  outline: inherit;
  box-shadow: none;
}

.c0:disabled {
  opacity: 0.6;
  -webkit-filter: saturate(60%);
  filter: saturate(60%);
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  cursor: not-allowed;
}

.c1 {
  width: auto;
  height: auto;
}

@media screen and (min-width:0) {

}

@media screen and (min-width:320px) {

}

@media screen and (min-width:480px) {

}

@media screen and (min-width:768px) {

}

@media screen and (min-width:1024px) {

}

@media screen and (min-width:1200px) {

}

<button
  aria-label="form submit button"
  className="c0 c1"
  id="submit-form-01"
  name="subject"
  title="Button"
  type="submit"
  value="form"
>
  Submit
</button>
`;

exports[`Storyshots ButtonHamburger Default 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  background-color: var(--clr-se-v01);
  border: none;
  padding: 0;
  font: inherit;
  cursor: pointer;
  outline: inherit;
  box-shadow: none;
}

.c0:disabled {
  opacity: 0.6;
  -webkit-filter: saturate(60%);
  filter: saturate(60%);
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  cursor: not-allowed;
}

.c1 {
  width: 36px;
  height: 26px;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  box-shadow: none;
  background-color: transparent;
}

.c1:focus {
  outline: rgba(var(--clr-ac-v03-rgb),0.1) 2px solid;
}

.c1 div {
  width: 100%;
  height: 4px;
  background-color: var(--clr-se-v01);
  box-shadow: 0 4px 4px rgba(var(--clr-nt-v02-rgb),0.25);
  -webkit-transition: all 0.5s linear;
  transition: all 0.5s linear;
}

.c1 div:first-child {
  -webkit-transform: rotate(0) translateY(0);
  -ms-transform: rotate(0) translateY(0);
  transform: rotate(0) translateY(0);
}

.c1 div:nth-child(2) {
  opacity: 1;
  -webkit-transform: rotate(0);
  -ms-transform: rotate(0);
  transform: rotate(0);
}

.c1 div:nth-child(3) {
  -webkit-transform: rotate(0) translateY(0);
  -ms-transform: rotate(0) translateY(0);
  transform: rotate(0) translateY(0);
}

@media screen and (min-width:0) {

}

@media screen and (min-width:320px) {

}

@media screen and (min-width:480px) {

}

@media screen and (min-width:768px) {

}

@media screen and (min-width:1024px) {

}

@media screen and (min-width:1200px) {

}

<button
  aria-label="open settings menu button"
  className="c0 c1"
  onClick={[Function]}
  role="button"
  title="hamburgerButton"
  type="button"
>
  <div />
  <div />
  <div />
</button>
`;

exports[`Storyshots Display1 Default 1`] = `
.c0 {
  margin: 0;
  text-align: center;
  font-variation-settings: 'wght' 700;
  font-weight: 700;
  font-size: var(--typ-d-1-fs);
  line-height: var(--typ-d-1-lh);
  -webkit-letter-spacing: var(--typ-d-1-ls);
  -moz-letter-spacing: var(--typ-d-1-ls);
  -ms-letter-spacing: var(--typ-d-1-ls);
  letter-spacing: var(--typ-d-1-ls);
}

@media screen and (min-width:0) {

}

@media screen and (min-width:320px) {

}

@media screen and (min-width:480px) {

}

@media screen and (min-width:768px) {

}

@media screen and (min-width:1024px) {

}

@media screen and (min-width:1200px) {

}

<h1
  className="c0"
>
  Basic Display1
</h1>
`;

exports[`Storyshots Display1 Styled 1`] = `
.c0 {
  margin: 0;
  text-align: center;
  color: navy;
  font-variation-settings: 'wght' 700;
  font-weight: 700;
  font-size: var(--typ-d-1-fs);
  line-height: var(--typ-d-1-lh);
  -webkit-letter-spacing: var(--typ-d-1-ls);
  -moz-letter-spacing: var(--typ-d-1-ls);
  -ms-letter-spacing: var(--typ-d-1-ls);
  letter-spacing: var(--typ-d-1-ls);
}

.c1 {
  font-style: italic;
  font-synthesis: none;
}

@media screen and (min-width:0) {

}

@media screen and (min-width:320px) {

}

@media screen and (min-width:480px) {

}

@media screen and (min-width:768px) {

}

@media screen and (min-width:1024px) {

}

@media screen and (min-width:1200px) {

}

<h1
  className="c0"
>
  <span
    className="c1"
  >
    Styled Display1
  </span>
</h1>
`;

exports[`Storyshots ParagraphLarge Default 1`] = `
.c0 {
  margin: 0;
  text-align: center;
  font-variation-settings: 'wght' 400;
  font-weight: 400;
  font-size: var(--typ-p-lg-fs);
  line-height: var(--typ-p-lg-lh);
}

@media screen and (min-width:0) {

}

@media screen and (min-width:320px) {

}

@media screen and (min-width:480px) {

}

@media screen and (min-width:768px) {

}

@media screen and (min-width:1024px) {

}

@media screen and (min-width:1200px) {

}

<p
  className="c0"
>
  Basic ParagraphLarge
</p>
`;

exports[`Storyshots ParagraphLarge Styled 1`] = `
.c0 {
  margin: 0;
  text-align: center;
  color: navy;
  text-shadow: 0 4px 4px rgba(var(--clr-nt-v02-rgb),0.25);
  font-variation-settings: 'wght' 400;
  font-weight: 400;
  font-size: var(--typ-p-lg-fs);
  line-height: var(--typ-p-lg-lh);
}

.c1 {
  font-style: italic;
  font-synthesis: none;
}

@media screen and (min-width:0) {

}

@media screen and (min-width:320px) {

}

@media screen and (min-width:480px) {

}

@media screen and (min-width:768px) {

}

@media screen and (min-width:1024px) {

}

@media screen and (min-width:1200px) {

}

<p
  className="c0"
>
  <span
    className="c1"
  >
    Styled ParagraphLarge
  </span>
</p>
`;
